dnl Process this file with autoconf to produce a configure script.

AC_INIT(Source/robodoc.h)

AM_CONFIG_HEADER(Source/config.h)

AM_INIT_AUTOMAKE(robodoc, 3.2.3)

AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strstr)

AC_OUTPUT(makefile Docs/makefile Source/makefile)

